CSS Motion Path: Allow for zoom and High DPI

The distances expressed in path strings (and methods like
PointAndNormalAtLength) do not take zoom or high DPI into
account.

On Window 10 highdpi machines, motion path elements were being
placed incorrectly.

BUG=785219

Change-Id: I4d17cb92d8ba6c6fcfa3ae5f0c3f294d304e6740
Reviewed-on: https://chromium-review.googlesource.com/860964
Reviewed-by: nainar <nainar@chromium.org>
Commit-Queue: Eric Willigers <ericwilligers@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528559}
Former-commit-id: c1229dbd9e3cd0af88c684124ba5b7ef10a4daaa